Config jest teste

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "yarn test --watch"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.0",
+    "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
     "eslint": "8.4.1",
