--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.0",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
+    "@types/styled-components": "^5.1.17",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "jest": "^27.4.4",
