--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,7 @@
     "jest": true,
     "node": true
   },
-  "extends": "next/core-web-vitals"
+  "extends": [
+  "next/core-web-vitals",
+  "plugin:prettier/recommended"]
 }
