--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.4",
+    "prettier": "2.5.1",
     "typescript": "^4.5.3"
   }
 }
