--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.4",
+    "jest-styled-components": "^7.0.8",
     "prettier": "2.5.1",
     "typescript": "^4.5.3"
   }
