--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "editor.fontSize": 18,
   "terminal.integrated.fontSize": 16,
   "editor.formatOnSave": false,
+  "typescript.suggestionActions.enabled": false,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   }
