--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "next": "12.0.7",
+    "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "storybook-addon-knobs-color-options": "^6.2.0-rc.2",
